[gd_scene load_steps=21 format=3 uid="uid://3hb18o8n62d"]

[ext_resource type="PackedScene" uid="uid://7jnwei6j4avo" path="res://Scenes/Utility/Contador.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://b17rf02r12bmp" path="res://Scenes/Utility/analog/Analog.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/Pause/PauseMenu.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/shader/ShaderWindWakerBeach.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Turtle/Turtle.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Illea/Nadando/IleaNadando.tscn" id="6"]
[ext_resource type="Script" uid="uid://d0xynw7a8ntdp" path="res://Scenes/Games/ObstacleRace/Nivel1/ObstacleRace.gd" id="7"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Islands/Island1/Island.tscn" id="8"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Islands/Island2/Island.tscn" id="9"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Islands/Trash/Trash2/Trash.tscn" id="10"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Islands/Trash/Trash1/Trash.tscn" id="11"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Islands/Trash/Trash3/Trash.tscn" id="12"]
[ext_resource type="PackedScene" path="res://Scenes/Entity/Islands/Trash/Trash4/Trash.tscn" id="13"]
[ext_resource type="AudioStream" uid="uid://cgdl3004khwqp" path="res://Assets/Sounds/obstacle_race.ogg" id="14"]
[ext_resource type="AudioStream" uid="uid://yl51anc2kk07" path="res://Assets/Sounds/SFX/get_item.wav" id="15"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/GameOver/GameOver.tscn" id="16"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/Win/Win.tscn" id="17"]
[ext_resource type="FontFile" path="res://Assets/Fonts/btnFont.tres" id="18"]
[ext_resource type="Texture2D" uid="uid://cob8eefiqhkjs" path="res://Assets/Images/Fondo de contador de puntos.png" id="19"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 3200, 2, 0, 0, 0, 0, 3200, 1798)
}
point_count = 2

[node name="ObstacleRace" type="Node2D" groups=["level_obstacle_race"]]
script = ExtResource("7")
Island1 = ExtResource("8")
Island2 = ExtResource("9")
Trash1 = ExtResource("11")
Trash2 = ExtResource("10")
Trash3 = ExtResource("12")
Trash4 = ExtResource("13")

[node name="Contador" parent="." instance=ExtResource("1")]
z_index = 2

[node name="Analog" parent="." instance=ExtResource("2")]
z_index = 100
position = Vector2(213, 1582)
scale = Vector2(2, 2)

[node name="Background" type="Node" parent="."]

[node name="ShaderWindWakerBeach" parent="Background" instance=ExtResource("4")]
z_index = -1

[node name="Characters" type="Node" parent="."]

[node name="Turtle" parent="Characters" groups=["obstacle_race_turtle"] instance=ExtResource("5")]
position = Vector2(2784, 832)
rotation = 1.5708

[node name="IleaNadando" parent="Characters" instance=ExtResource("6")]
position = Vector2(250, 900)
rotation = 1.5708

[node name="Spawn" type="Node" parent="."]

[node name="IslandPath" type="Path2D" parent="Spawn"]
curve = SubResource("1")

[node name="IslandSpawn" type="PathFollow2D" parent="Spawn/IslandPath"]
position = Vector2(3200, 2)
rotation = 1.5708

[node name="IslandTimer" type="Timer" parent="Spawn"]

[node name="IslandSpeedTimer" type="Timer" parent="Spawn"]
wait_time = 5.0

[node name="Sounds" type="Node" parent="."]

[node name="BGSong" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("14")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="GetSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15")
bus = &"SFX"

[node name="Pause" type="Node2D" parent="."]
z_index = 100

[node name="PauseMenu" parent="Pause" instance=ExtResource("3")]
modulate = Color(1, 1, 1, 0.588235)
z_index = 100
position = Vector2(3200, 1750)

[node name="GameOver" parent="." instance=ExtResource("16")]
visible = false

[node name="Win" parent="." instance=ExtResource("17")]
visible = false

[node name="Timer" type="Node2D" parent="."]
z_index = 2
position = Vector2(1600, 0)

[node name="BGTimer" type="Sprite2D" parent="Timer"]
rotation = -1.5708
scale = Vector2(1, 2)
texture = ExtResource("19")
offset = Vector2(125, -2)

[node name="Timer" type="Timer" parent="Timer"]
wait_time = 240.0
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="Timer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -189.0
offset_right = 189.0
offset_bottom = 162.0

[node name="Timer" type="MarginContainer" parent="Timer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Timer/VBoxContainer/Timer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource("18")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StepTimer" type="Timer" parent="Timer"]
wait_time = 30.0
autostart = true

[connection signal="timeout" from="Spawn/IslandTimer" to="." method="_on_IslandTimer_timeout"]
[connection signal="timeout" from="Spawn/IslandSpeedTimer" to="." method="_on_IslandSpeedTimer_timeout"]
[connection signal="timeout" from="Timer/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/StepTimer" to="." method="_on_StepTimer_timeout"]
